...
    var button: Button!
    var buttonRecognizer: UITapGestureRecognizer?
    var bluetoothPermission: BluetoothPermission?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.button = Button(self, text: "Allow Bluetooth", subtext: "This is required for the app to work.")
        //swiftlint:disable:next line_length
        self.mainText = MainText(self, text: "We use Bluetooth to anonymously log interactions with other Covid Watch users. Your personal data is always private and never shared.")
        self.largeText = LargeText(self, text: "Privately Connect")
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
//        Hide the Menu hamburger
        self.header.hasMenu = false
...
