...

    override func viewDidLoad() {
        super.viewDidLoad()
        self.button = Button(self, text: "Allow Notifications", subtext: nil)
        //swiftlint:disable:next line_length
        self.mainText = MainText(self, text: "Enable notifications to receive anonymized alerts when you have come into contact with a confirmed case of COVID-19.")
        self.largeText = LargeText(self, text: "Recieve Alerts")
        NotificationCenter.default.addObserver(
            self, selector: #selector(nextScreenIfNotificationsEnabled),
            name: UIApplication.willEnterForegroundNotification, object: nil)
    }

    override func viewDidLayoutSubviews() {
...
