...

    public struct Key {
        public static let isUserSick = "isUserSick"
        public static let mostRecentExposureDate = "mostRecentExposureDate"
        public static let isContactEventLoggingEnabled = "isContactEventLoggingEnabled"
        public static let lastContactEventsDownloadDate = "lastContactEventsDownloadDate"
        public static let isFirstTimeUser = "isFirstTimeUser"
        public static let testLastSubmittedDate = "testLastSubmittedDate"

        public static let registration: [String: Any] = [
            isUserSick: false,
            isContactEventLoggingEnabled: false,
            isFirstTimeUser: true
...
